﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-29 Michal Čihař  <michal@cihar.com>
    * Documentation.html, config.default.php, libraries/common.lib.php: Link
      documentation to version we run (RFE #1334292), fix links for chapter
      documentation (bug #1341676), drop support for old links.

2005-10-29 Olivier Mueller <om@omnis.ch>
    * scripts/upgrade.pl: various fixes (was not handling rc/pl correctely),
      and improvements (--force option, installation summary, backup
      directory timestamp)
      
2005-10-29 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: clarification on FAQ 6.20
    * server_privileges.php: respect the chosen initial
    * libraries/display_tbl.lib.php: patch 1328902 (adapted), format row count
      in the Browse header, thanks to Cal Henderson

2005-10-28 Sebastian Mendel <cybot_tm@users.sourceforge.net>
	* server_privilegs.php, libraries/common.lib.php,
	  themes/*/theme_right.css.php:
	   - minor tweak in display
	   - added PMA_unescape_mysql_wildcards()
	   - bug #1144110 Unable to escape "_"
	   - now every user from every mysql table is displayed
	   - no table specific rights for db wildcards
	* index.php, favicon.ico: added favicon.ico

2005-10-27 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php::PMA_formatNumber(), 
      db_details_structure.php: do not truncate rowcount
    * libraries/mysql_charsets.lib.php::PMA_getDbCollation():
      - preserve selected db
      - make use of PMA_DBI_select_db()
      - documentation
    * tbl_properties_structure.php:
      - added browser icon for each field (count unique values)
      - removed styling
      - make use of global row highlighting/marking
      - display 'print table' and row stats for views
      - no actions for info_schema tables
    * css/phpmyadmin.css.php:
      - added style for class selectallarrow
      - added extra space between icons and text