@@ -9,6 +9,10 @@ $Source$
     * Documentation.html, config.default.php, libraries/common.lib.php: Link
       documentation to version we run (RFE #1334292), fix links for chapter
       documentation (bug #1341676), drop support for old links.
+    * tbl_indexes.php, tbl_properties.inc.php, tbl_select.php,
+      libraries/display_create_database.lib.php,
+      libraries/sql_query_form.lib.php: Fix documentation links (bug
+      #1341676).
 
 2005-10-29 Olivier Mueller <om@omnis.ch>
     * scripts/upgrade.pl: various fixes (was not handling rc/pl correctely),
